objects/smagicinteract__smsMagic__c.object
<CustomObject>
    <description>SMSMagic object in Interact, This is basic Object which stores information about Outgoing SMS.</description>
    <fields>
        <fullName>HS_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HS Activity</label>
        <referenceTo>HS_Activity__c</referenceTo>
        <relationshipLabel>SMS History</relationshipLabel>
        <relationshipName>SMS_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMS_Sending_Date__c</fullName>
        <label>SMS Sending Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UK_number__c</fullName>
        <formula>IF(OR( BEGINS( smagicinteract__PhoneNumber__c , &quot;44&quot;) ,  BEGINS( smagicinteract__PhoneNumber__c , &quot;7&quot;) ,  BEGINS( smagicinteract__PhoneNumber__c , &quot;07&quot;) ),True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UK number?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wave_Selection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wave Selection</label>
        <referenceTo>Wave_Selection__c</referenceTo>
        <relationshipLabel>SMS History</relationshipLabel>
        <relationshipName>SMS_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>smsMagic</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>smsMagic</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__CreatedOn__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>CreatedOn</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>to track sms&apos;s sent to Leads.</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>smsMagic</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Name__c</fullName>
        <description>Name of the sms receiver</description>
        <label>Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__ObjectType__c</fullName>
        <description>Object type of receiver contact/lead/user</description>
        <label>ObjectType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__PhoneNumber__c</fullName>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>smagicinteract__SMSText__c</fullName>
        <label>SMSText</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smagicinteract__SenderId__c</fullName>
        <label>SenderId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Sent_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sent By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SMS_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>for Tasks created for User.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>smsMagic</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__deliveryStatus__c</fullName>
        <label>deliveryStatus</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__disableSMSOnTrigger__c</fullName>
        <defaultValue>0</defaultValue>
        <label>disableSMSOnTrigger</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smagicinteract__external_field__c</fullName>
        <defaultValue>null</defaultValue>
        <externalId>true</externalId>
        <label>external field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>smagicinteract__response__c</fullName>
        <label>response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__sentStatus__c</fullName>
        <label>sentStatus</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__statusMessage__c</fullName>
        <label>statusMessage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SMS History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>smagicinteract__SenderId__c</columns>
        <columns>smagicinteract__PhoneNumber__c</columns>
        <columns>smagicinteract__SMSText__c</columns>
        <columns>smagicinteract__CreatedOn__c</columns>
        <columns>smagicinteract__Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>smagicinteract__external_field__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>3/15/2016 12:00 AM</value>
        </filters>
        <label>8 Feb</label>
    </listViews>
    <listViews>
        <fullName>Dean_s_texts</fullName>
        <columns>NAME</columns>
        <columns>smagicinteract__Contact__c</columns>
        <columns>smagicinteract__SMSText__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Dean Horton</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>7/24/2013 12:00 AM</value>
        </filters>
        <label>Dean&apos;s texts</label>
        <sharedTo>
            <role>Marketing_Associate_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HEAL_SMS_check</fullName>
        <columns>NAME</columns>
        <columns>smagicinteract__sentStatus__c</columns>
        <columns>smagicinteract__deliveryStatus__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>smagicinteract__SMSText__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>10/20/2014 12:00 AM</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>Madeleine Auer,joanna turner-attwell,stephanie,yannick,Iman</value>
        </filters>
        <label>HEAL SMS check</label>
    </listViews>
    <listViews>
        <fullName>HeadStart</fullName>
        <columns>NAME</columns>
        <columns>smagicinteract__CreatedOn__c</columns>
        <columns>smagicinteract__deliveryStatus__c</columns>
        <columns>smagicinteract__response__c</columns>
        <columns>SMS_Sending_Date__c</columns>
        <columns>smagicinteract__SMSText__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>smagicinteract__SenderId__c</field>
            <operation>equals</operation>
            <value>Head Start</value>
        </filters>
        <label>HeadStart</label>
    </listViews>
    <listViews>
        <fullName>HeadStart1</fullName>
        <columns>NAME</columns>
        <columns>smagicinteract__sentStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>smagicinteract__SenderId__c</field>
            <operation>equals</operation>
            <value>Head Start</value>
        </filters>
        <label>HeadStart</label>
    </listViews>
    <listViews>
        <fullName>Incoming_messages_to_Linda1</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>smagicinteract__SenderId__c</columns>
        <columns>smagicinteract__SMSText__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>smagicinteract__SenderId__c</field>
            <operation>equals</operation>
            <value>07341563889</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>2/10/2016 12:00 AM</value>
        </filters>
        <label>SMS Issue (LINDA)</label>
    </listViews>
    <listViews>
        <fullName>Kate_s_texts</fullName>
        <columns>NAME</columns>
        <columns>smagicinteract__SMSText__c</columns>
        <columns>smagicinteract__Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Kate</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Weiler</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>7/1/2012 12:00 AM</value>
        </filters>
        <label>Kate&apos;s texts</label>
    </listViews>
    <listViews>
        <fullName>NW_SMS_check</fullName>
        <columns>NAME</columns>
        <columns>smagicinteract__sentStatus__c</columns>
        <columns>smagicinteract__deliveryStatus__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>smagicinteract__SMSText__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>10/20/2014 12:00 AM</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>heather,giulia,emilie</value>
        </filters>
        <label>NW SMS check</label>
    </listViews>
    <listViews>
        <fullName>SMS_APRIL_2014</fullName>
        <columns>NAME</columns>
        <columns>smagicinteract__Contact__c</columns>
        <columns>smagicinteract__CreatedOn__c</columns>
        <columns>smagicinteract__SMSText__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>smagicinteract__Sent_By__c</columns>
        <columns>smagicinteract__Campaign__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>smagicinteract__CreatedOn__c</field>
            <operation>greaterThan</operation>
            <value>4/14/2014 12:00 AM</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>OBS user</value>
        </filters>
        <label>SMS APRIL 2014</label>
    </listViews>
    <listViews>
        <fullName>SMS_Big_Celebration</fullName>
        <columns>NAME</columns>
        <columns>SMS_Sending_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>smagicinteract__Campaign__c</field>
            <operation>contains</operation>
            <value>celebration</value>
        </filters>
        <label>SMS Big Celebration</label>
    </listViews>
    <listViews>
        <fullName>SMS_created_date_ch</fullName>
        <columns>smagicinteract__SenderId__c</columns>
        <columns>smagicinteract__PhoneNumber__c</columns>
        <columns>smagicinteract__SMSText__c</columns>
        <columns>smagicinteract__CreatedOn__c</columns>
        <columns>smagicinteract__Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>smagicinteract__external_field__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>smagicinteract__Sent_By__c</field>
            <operation>equals</operation>
            <value>Kinni</value>
        </filters>
        <label>SMS created date ch 1</label>
    </listViews>
    <listViews>
        <fullName>SMS_created_date_ch_2</fullName>
        <columns>smagicinteract__SenderId__c</columns>
        <columns>smagicinteract__PhoneNumber__c</columns>
        <columns>smagicinteract__SMSText__c</columns>
        <columns>smagicinteract__CreatedOn__c</columns>
        <columns>smagicinteract__Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>smagicinteract__external_field__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>7/3/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>contains</operation>
            <value>chowa</value>
        </filters>
        <label>SMS created date ch 2</label>
    </listViews>
    <listViews>
        <fullName>smagicinteract__All</fullName>
        <columns>NAME</columns>
        <columns>smagicinteract__deliveryStatus__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>smagicinteract__SenderId__c</columns>
        <columns>smagicinteract__PhoneNumber__c</columns>
        <columns>smagicinteract__SMSText__c</columns>
        <columns>smagicinteract__Contact__c</columns>
        <columns>smagicinteract__Lead__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>smagicinteract__CreatedOn__c</columns>
        <columns>smagicinteract__external_field__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>smagicinteract__CreatedOn__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SM-{000000000}</displayFormat>
        <label>Record number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>